Fix alignment of level select buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ body {
     position: absolute;
     display: none;
     flex-direction: column;
+    justify-content: center;
     width: 400px;
     height: 200px;
     top: 50%;
